Bug 183484 - [PATCH] limits(1): usr.bin/limits: make -e work without /proc
Summary: [PATCH] limits(1): usr.bin/limits: make -e work without /proc
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: 1.0-CURRENT
Hardware: Any Any
: Normal Affects Only Me
Assignee: freebsd-bugs (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-30 14:30 UTC by Stefan Neudorf
Modified: 2014-10-16 20:18 UTC (History)
1 user (show)

See Also:


Attachments
noprocdir.diff (1.61 KB, patch)
2013-10-30 14:30 UTC, Stefan Neudorf
no flags Details | Diff
noprocdir.diff (1.60 KB, patch)
2013-10-30 14:43 UTC, Stefan Neudorf
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Neudorf 2013-10-30 14:30:00 UTC

How-To-Repeat:  $ tcsh
 > limits -e
  ulimit -t unlimited;
  ulimit -f unlimited;
  ulimit -d 33554432;
  ulimit -s 524288;
  ulimit -c unlimited;
  ulimit -m unlimited;
  ulimit -l 64;
  ulimit -u 8528;
  ulimit -n 117585;
  ulimit -b unlimited;
  ulimit -v unlimited;
  ulimit -p unlimited;
  ulimit -w unlimited;
  ulimit -k unlimited;
 > sudo mount /proc
 > limits -e
  limit cputime unlimited;
  limit filesize unlimited;
  limit datasize 33554432;
  limit stacksize 524288;
  limit coredumpsize unlimited;
  limit memoryuse unlimited;
  limit memorylocked 64;
  limit maxproc 8528;
  limit descriptors 117585;
  limit sbsize unlimited;
  limit vmemoryuse unlimited;
  limit pseudoterminals unlimited;
  limit swapuse unlimited;
  limit kqueues unlimited;
Comment 1 Stefan Neudorf 2013-10-30 14:43:17 UTC
Stefan Neudorf <BM-2cXppXU4T67w7j6NCir9T1WdzBHmFgBnLj@bitmessage.ch>
writes:

> 	if (shell != NULL && stat(shell, &st) != -1) {
> 	    struct stat st1;
> 
> 	    mib[0] = CTL_KERN;
> 	    mib[1] = KERN_PROC;
> 	    mib[2] = KERN_PROC_PATHNAME;
> 	    mib[3] = ppid;
> 	    len = sizeof(path);
> 	    sysctl(mib, 4, path, &len, NULL, 0);
> 	    /* $SHELL is actual shell? */
> 	    if (stat(path, &st1) != -1 && memcmp(&st, &st1, sizeof st) == 0)
> 		return getshellbyname(shell);
> 	}
> 	mib[2] = KERN_PROC_PID;
> 	len = sizeof(kp);
> 	sysctl(mib, 4, &kp, &len, NULL, 0);

I was a bit too hasty, mib[] may be partially unset.

> 	if (kp.ki_comm != NULL)
> 	    return getshellbyname(kp.ki_comm);
Comment 2 dfilter service freebsd_committer freebsd_triage 2013-10-31 09:29:45 UTC
Author: kib
Date: Thu Oct 31 09:29:37 2013
New Revision: 257430
URL: http://svnweb.freebsd.org/changeset/base/257430

Log:
  Remove the dependency on procfs.  Use sysctl KERN_PROC_PATHNAME and
  KERN_PROC_PID to obtain the parent process pathname and command, used
  to determine the calling shell.
  
  Submitted by:	Stefan Neudorf
  PR:	bin/183484
  MFC after:	1 week

Modified:
  head/usr.bin/limits/limits.c

Modified: head/usr.bin/limits/limits.c
==============================================================================
--- head/usr.bin/limits/limits.c	Thu Oct 31 09:20:30 2013	(r257429)
+++ head/usr.bin/limits/limits.c	Thu Oct 31 09:29:37 2013	(r257430)
@@ -30,6 +30,7 @@ __FBSDID("$FreeBSD$");
 #include <sys/types.h>
 #include <sys/stat.h>
 #include <sys/sysctl.h>
+#include <sys/user.h>
 #include <sys/param.h>
 #include <stdlib.h>
 #include <unistd.h>
@@ -705,27 +706,32 @@ getshelltype(void)
     pid_t ppid = getppid();
 
     if (ppid != 1) {
-	FILE * fp;
+	struct kinfo_proc kp;
 	struct stat st;
-	char procdir[MAXPATHLEN], buf[128];
-	int l = sprintf(procdir, "/proc/%ld/", (long)ppid);
+	char path[MAXPATHLEN];
 	char * shell = getenv("SHELL");
+	int mib[4];
+	size_t len;
+
+	mib[0] = CTL_KERN;
+	mib[1] = KERN_PROC;
+	mib[3] = ppid;
 
 	if (shell != NULL && stat(shell, &st) != -1) {
 	    struct stat st1;
 
-	    strcpy(procdir+l, "file");
-	    /* $SHELL is actual shell? */
-	    if (stat(procdir, &st1) != -1 && memcmp(&st, &st1, sizeof st) == 0)
-		return getshellbyname(shell);
-	}
-	strcpy(procdir+l, "status");
-	if (stat(procdir, &st) == 0 && (fp = fopen(procdir, "r")) != NULL) {
-	    char * p = fgets(buf, sizeof buf, fp)==NULL ? NULL : strtok(buf, " \t");
-	    fclose(fp);
-	    if (p != NULL)
-		return getshellbyname(p);
+	    mib[2] = KERN_PROC_PATHNAME;
+	    len = sizeof(path);
+	    if (sysctl(mib, 4, path, &len, NULL, 0) != -1) {
+		/* $SHELL is actual shell? */
+		if (stat(path, &st1) != -1 && memcmp(&st, &st1, sizeof st) == 0)
+		    return getshellbyname(shell);
+	    }
 	}
+	mib[2] = KERN_PROC_PID;
+	len = sizeof(kp);
+	if (sysctl(mib, 4, &kp, &len, NULL, 0) != -1)
+	    return getshellbyname(kp.ki_comm);
     }
     return SH_SH;
 }
_______________________________________________
svn-src-all@freebsd.org mailing list
http://lists.freebsd.org/mailman/listinfo/svn-src-all
To unsubscribe, send any mail to "svn-src-all-unsubscribe@freebsd.org"