Remove the dependency on procfs.  Use sysctl KERN_PROC_PATHNAME and KERN_PROC_PID to obtain the parent process pathname and command, used to determine the calling shell.

Submitted by:	Stefan Neudorf
PR:	bin/183484
MFC after:	1 week